final version to be submitted for review

--- a/SeminarThesis/ccs-thesis.cls
+++ b/SeminarThesis/ccs-thesis.cls
@@ -169,6 +169,8 @@
 }{
 }
 \DeclareSIUnit\byte{Byte}
+\DeclareSIUnit\bits{b}
+\DeclareSIUnit\vehicle{vehicles}
 \DeclareSIUnit\decibelm{dBm}
 \DeclareSIUnit\mph{mph}
 
