--- a/SeminarThesis/references.bib
+++ b/SeminarThesis/references.bib
@@ -214,3 +214,38 @@ doi={10.1109/VNC.2012.6407446},
 ISSN={2157-9857},
 month={Nov},}
 
+@inproceedings{dlr71460,
+           month = {October},
+          author = {Michael Behrisch and Laura Bieker and Jakob Erdmann and Daniel Krajzewicz},
+       booktitle = {SIMUL 2011},
+          editor = {SINTEF \& University of Oslo Aida Omerovic and RTI International - Research Triangle Park Diglio A. Simoni and RTI International - Research Triangle Park Georgiy Bobashev},
+           title = {SUMO {--} Simulation of Urban MObility: An Overview},
+       publisher = {ThinkMind},
+         journal = {Proceedings of SIMUL 2011, The Third International Conference on Advances in System Simulation},
+            year = {2011},
+        keywords = {microscopic traffic simulation, software, open
+source},
+             url = {http://elib.dlr.de/71460/},
+        abstract = {SUMO is an open source traffic simulation package
+including net import and demand modeling components. We
+describe the current state of the package as well as future
+developments and extensions. SUMO helps to investigate
+several research topics e.g. route choice and traffic light
+algorithm or simulating vehicular communication. Therefore
+the framework is used in different projects to simulate
+automatic driving or traffic management strategies.}
+}
+
+@INPROCEEDINGS{4127230, 
+author={M. Fiore and J. Harri and F. Filali and C. Bonnet}, 
+booktitle={Simulation Symposium, 2007. ANSS '07. 40th Annual}, 
+title={Vehicular Mobility Simulation for VANETs}, 
+year={2007}, 
+volume={}, 
+number={}, 
+pages={301-309}, 
+abstract={During the last few years, continuous progresses in wireless communications have opened new research fields in computer networking, aimed at extending data networks connectivity to environments where wired solutions are impracticable. Among these, vehicular traffic is attracting a growing attention from both academia and industry, due to the amount and importance of the related applications, ranging from road safety to traffic control, up to mobile entertainment. Vehicular ad-hoc networks (VANETs) are self-organized networks built up from moving vehicles, and are part of the broader class of mobile ad-hoc networks (MANETs). Because of their peculiar characteristics, VANETs require the definition of specific networking techniques, whose feasibility and performance are usually tested by means of simulation. One of the main challenges posed by VANETs simulations is the faithful characterization of vehicular mobility at both macroscopic and microscopic levels, leading to realistic non-uniform distributions of cars and velocity, and unique connectivity dynamics. In this paper, we first present and describe VanetMobiSim, a freely available generator of realistic vehicular movement traces for networks simulators. Then, VanetMobiSim is validated by illustrating how the interaction between featured macro- and micro-mobility is able to reproduce typical phenomena of vehicular traffic}, 
+keywords={ad hoc networks;traffic engineering computing;MANET;VANET;mobile ad-hoc networks;vehicular ad-hoc networks;vehicular mobility simulation;vehicular traffic;wireless communications;Ad hoc networks;Application software;Communication system traffic control;Computational modeling;Computer networks;Industrial control;Road safety;Traffic control;Vehicles;Wireless communication}, 
+doi={10.1109/ANSS.2007.44}, 
+ISSN={1080-241X}, 
+month={March},}
